--- a/helm/test-jenkins/templates/deployment.yaml
+++ b/helm/test-jenkins/templates/deployment.yaml
@@ -20,10 +20,8 @@ spec:
       labels:
         {{- include "test-jenkins.selectorLabels" . | nindent 8 }}
     spec:
-      {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
+        - name: {{- .Values.imagePullSecrets }}
       serviceAccountName: {{ include "test-jenkins.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
