--- a/helm/test-jenkins/values.yaml
+++ b/helm/test-jenkins/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   repository: 192.168.31.110:8084/test/test-jenkins
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: SNAPSHOT-4
 
